# litegraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: store-format.md
examples/: README.md  fixture-branching.sh
scripts/: smoke.sh
src/: btree.rs  cli.rs  dbfile.rs  diff.rs  lib.rs  main.rs  record.rs  sha256.rs  snapshot.rs  store.rs
tests/: cli.rs  format.rs
tests/common/: mod.rs
tests/fixtures/: inventory.db
